transmission/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/name: transmission
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: transmission
  template:
    metadata:
      labels:
        app.kubernetes.io/name: transmission
    spec:
      containers:
        - name: gluetun
          image: docker.io/qmcgaw/gluetun:latest
          imagePullPolicy: Always
          securityContext:
            privileged: true
            readOnlyRootFilesystem: false
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - containerPort: 8888
              name: proxy
              protocol: TCP
            - containerPort: 8000
              name: control
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 400Mi
        - name: transmission
          image: ghcr.io/linuxserver/transmission
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9091
              name: http
              protocol: TCP
            - containerPort: 51413
              name: bt-udp
              protocol: UDP
            - containerPort: 51413
              name: bt-tcp
              protocol: TCP
          resources:
            limits:
              cpu: 400m
              memory: 1500Mi
            requests:
              cpu: 200m
              memory: 1000Mi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: media
              subPath: Scratch/Download/Transmission
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: transmission-config
        - name: media
          persistentVolumeClaim:
            claimName: media-share
