transmission/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
  labels:
    app.kubernetes.io/name: transmission
  annotations:
    kube-vip.io/loadbalancerIPs: 10.1.1.48
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: transmission
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: transmission-bittorrent
  labels:
    app.kubernetes.io/name: transmission
spec:
  ports:
    - name: bittorrent-tcp
      port: 51413
      protocol: TCP
    - name: bittorrent-udp
      port: 51413
      protocol: UDP
  selector:
    app.kubernetes.io/name: transmission
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: transmission-vpn
  labels:
    app.kubernetes.io/name: transmission
spec:
  ports:
    - name: proxy
      port: 8888
      protocol: TCP
      targetPort: proxy
  selector:
    app.kubernetes.io/name: transmission
  type: ClusterIP
