transmission/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmission
  labels:
    app.kubernetes.io/name: transmission
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: https-xmple-io
  hostnames:
    - db3000.xmple.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /transmission
      backendRefs:
        - name: transmission
          port: 80
          kind: Service
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: forwardauth-authelia
